networkpolicy/bash-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bash
spec:
  podSelector:
    matchLabels:
      app: bash

  policyTypes:
    - Egress

  egress:
    # CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53

    # DNS resolver
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: named
          podSelector:
            matchLabels:
              app: named
      ports:
        - protocol: UDP
          port: 53

    # Squid proxy
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: squid
          podSelector:
            matchLabels:
              app: squid-squid
      ports:
        - protocol: TCP
          port: 3128
